# plover-stenograph

./: .gitignore  README.md  setup.cfg
.github/workflows/: build.yml
plover_stenograph/: __init__.py  base.py  usb.py  wifi.py
stenograph/: __init__.py  exception.py  machine.py  packet.py  stroke.py  transport.py  transport_libusb.py  transport_wifi.py  transport_windows.py
