[metadata]
name = plover-stenograph
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev10
  more_itertools
  pyusb>=1.0.0;platform_system!="Windows"
packages =
  stenograph
	plover_stenograph

[options.entry_points]
plover.machine =
  Stenograph USB = plover_stenograph:StenographUsb
  Stenograph Wi-Fi = plover_stenograph:StenographWiFi
