[metadata]
name = plover-stenograph
version = 2.0
description = Plover plugin for Stenograph machines
long_description = file:README.md
long_description_content_type = text/markdown
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev10
  more_itertools
  pyusb>=1.0.0  ; platform_system!="Windows"
packages =
  stenograph
	plover_stenograph

[options.entry_points]
plover.machine =
  Stenograph USB = plover_stenograph:StenographUsb
  Stenograph Wi-Fi = plover_stenograph:StenographWiFi
